--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/kevinejohn/simple-aes-256.git"
+  },
+  "dependencies": {
+    "browserify-aes": "^1.2.0",
+    "hash.js": "^1.1.7"
   }
 }
